# arc-rs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  items.json
.github/workflows/: docker.yml
arc-x402/: Cargo.toml
arc-x402/src/: client.rs  constants.rs  eip712.rs  error.rs  gateway.rs  lib.rs  server.rs  signer.rs  types.rs  validate.rs
cache/: solidity-files-cache.json
contracts/: MediaAccess.sol
contracts/script/: Deploy.s.sol
crates/access-gated-server/: Cargo.toml
crates/access-gated-server/src/: access.rs  config.rs  html.rs  main.rs  streaming.rs
crates/jellyfin-proxy/: Cargo.toml
crates/jellyfin-proxy/src/: access.rs  config.rs  main.rs  proxy.rs  streaming.rs
crates/media-access/: Cargo.toml
crates/media-access/src/: lib.rs
examples/buyer/: Cargo.toml
examples/buyer/src/: main.rs
examples/generate-keys/: Cargo.toml
examples/generate-keys/src/: main.rs
examples/jellyfin-proxy/: Cargo.toml
examples/seller/: Cargo.toml
examples/seller/src/: main.rs
