[package]
name = "access-gated-server"
version = "0.1.0"
edition = "2021"
description = "Generic x402-gated content server — reference implementation of the arc-x402 library"

[[bin]]
name = "access-gated-server"
path = "src/main.rs"

[dependencies]
# Core payment library
arc-x402 = { path = "../../arc-x402" }
# On-chain access control
media-access = { path = "../media-access" }
# alloy primitives (Address, B256, TxHash) — same version as media-access
alloy-primitives = "1.6.0"

# HTTP server
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }

# Database (SQLite access cache)
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "tls-none"] }

# Concurrent session map
dashmap = "6"
uuid = { version = "1", features = ["v4"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
