[package]
name = "media-access"
version = "0.1.0"
edition = "2021"
description = "alloy bindings for the MediaAccess soulbound access contract"

[dependencies]
alloy = { version = "2.0.5", features = [
    "sol-types",
    "contract",
    "providers",
    "provider-http",
    "signer-local",
    "network",
    "rpc-types",
] }
url = "2"
anyhow = "1"
