[package]
name = "buyer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "buyer"
path = "src/main.rs"

[dependencies]
arc-x402 = { path = "../../arc-x402" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
